# TUM-I2ROS-Autonomous-Drone

./: README.md
i2ros_project-main/: Project_notes.md  README.md
i2ros_project-main/Astar/: Astar.cpp  Astar.h
i2ros_project-main/doc/: Documentation.docx  project_init.docx
i2ros_project-main/drone_ws/: README.md
i2ros_project-main/drone_ws/src/controller_pkg/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/controller_pkg/launch/: circle_demo.launch  fly_demo.launch  fly_drones.launch
i2ros_project-main/drone_ws/src/controller_pkg/param/: pid_param.yaml  rotation.yaml
i2ros_project-main/drone_ws/src/controller_pkg/src/: controller_node.cpp  traj_planner.cpp  traj_planner.h  traj_publisher.cpp
i2ros_project-main/drone_ws/src/explore/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/explore/launch/: costmap_explore.launch  explore.launch
i2ros_project-main/drone_ws/src/explore/param/: costmap_server_params.yaml  explore_params.yaml
i2ros_project-main/drone_ws/src/explore_lite/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/explore_lite/include/explore/: costmap_client.h  explore.h  frontier_search.h
i2ros_project-main/drone_ws/src/explore_lite/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
i2ros_project-main/drone_ws/src/map/: package.xml
i2ros_project-main/drone_ws/src/map/launch/: map_service.launch  map_service_drone.launch  octomap.launch  on_host_simulation_map.launch  point_cloud.launch  simulation_map.launch
i2ros_project-main/drone_ws/src/octomap_mapping/octomap_server/include/octomap_server/: OctomapServer.h
i2ros_project-main/drone_ws/src/planning/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/planning/launch/: on_host_simulation_map_path.launch  path.launch  path2.launch  simulation_map_path.launch
i2ros_project-main/drone_ws/src/planning/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_drone1.yaml  global_costmap_params_drone2.yaml  global_planner_params.yaml  local_costmap_params_drone1.yaml  local_costmap_params_drone2.yaml  move_base_params_drone2.yaml
i2ros_project-main/drone_ws/src/planning/src/: world_center_pub.cpp  world_center_pub_drone1.cpp  world_center_pub_drone2.cpp
i2ros_project-main/drone_ws/src/service_pkg/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/service_pkg/srv/: stop_service.srv  switch_explore.srv
i2ros_project-main/drone_ws/src/simulation/: CMakeLists.txt  README.md  package.xml
i2ros_project-main/drone_ws/src/simulation/cfg/: Drones.rviz  sim-calibration.yaml  simulation.yaml
i2ros_project-main/drone_ws/src/simulation/launch/: on_host_simulation.launch  quadrotor.launch  simulation.launch
i2ros_project-main/drone_ws/src/simulation/src/: depth_camera_parser.h  fisheye_camera_parser.h  imu_parser.h  quadrotor_lcm.h  rgb_camera_parser.h  state_estimate_corruptor_node.cpp  time_server.cpp  transform_broadcaster.cpp  true_state_parser.h  unity_command_stream.h  unity_ros.cpp  unity_stream_parser.h  w_to_unity.cpp
i2ros_project-main/drone_ws/src/simulation/tcpimage/: CMakeLists.txt  TCPImageServer.cpp  TCPImageServer.h  TCPStreamReader.cpp  TCPStreamReader.h
i2ros_project-main/drone_ws/src/state_machine/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/state_machine/launch/: all_in_one.launch  host_all_in_one.launch  on_host_state_machine.launch  state_machine.launch
i2ros_project-main/drone_ws/src/state_machine/param/: state_machine_params_1.yaml  state_machine_params_2.yaml
i2ros_project-main/drone_ws/src/state_machine/src/: keyboard_control_node.cpp  state_machine.cpp
i2ros_project-main/drone_ws/src/system/fla_msgs/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/system/fla_msgs/msg/: Box.msg  ControlMessage.msg  FlightCommand.msg  FlightEvent.msg  FlightStateTransition.msg  JoyDef.msg  Latency.msg  NodeList.msg  NodeStatus.msg  ProcessStatus.msg  TelemString.msg  WaypointList.msg
i2ros_project-main/drone_ws/src/utilities/fla_utils/: CMakeLists.txt  nodelet_plugins.xml  package.xml
i2ros_project-main/drone_ws/src/utilities/fla_utils/include/fla_utils/: param_utils.h  process_status.h  ros_clock.h
i2ros_project-main/drone_ws/src/utilities/fla_utils/launch/: extract-flea3.launch  extract-xtion.launch  interpolate_imu.launch  vicon_pose2tf.launch
i2ros_project-main/drone_ws/src/utilities/fla_utils/python/: calibrate_imu.py  hallucinated_box.py  joystick_commands.py  mission_params.yaml  mission_tool.py  pose2quat.py  pose2tf.py  progress_bar_util.py  velocity_map_maker.py
i2ros_project-main/drone_ws/src/utilities/fla_utils/scripts/: land.sh  takeoff.sh
i2ros_project-main/drone_ws/src/utilities/fla_utils/src/: interpolate_imu_node.cc  laserscan_to_pointcloud.cpp  median_filter_nodelet.cpp  median_heap.h
i2ros_project-main/drone_ws/src/utilities/fla_utils/test/: median_heap_test.cpp
i2ros_project-main/drone_ws/src/utilities/utils/: CMakeLists.txt  package.xml
i2ros_project-main/drone_ws/src/utilities/utils/cmake/: setup.cmake
i2ros_project-main/drone_ws/src/utilities/utils/cmake/templates/: utilsConfig.cmake.in
i2ros_project-main/drone_ws/src/utilities/utils/src/time_manager/: clock.h  time_manager.h
