<?xml version="1.0"?>
<package>
  <name>fla_msgs</name>
  <version>0.0.0</version>
  <description>The fla_msgs package</description>
  <maintainer email="jcarter@csail.mit.edu">drc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <export>
  </export>
</package>
